--- a/IT1/Vurdering 30.april/FunFacts.html
+++ b/IT1/Vurdering 30.april/FunFacts.html
@@ -54,9 +54,72 @@
 
   <section class="Grid-container">
     <img src="" alt="">
-    <p>
 
-    </p>
+      1. IT WAS CREATED AS A KIDS’ SERIES.
+      Though it certainly maintains plenty of pint-sized fans to this day, the original concept for Doctor Who was specifically an educational program aimed at teaching kids about science and history.
+      In an interview with the BBC, Waris Hussein—who, at the age of 24, directed the very first episode of Doctor Who—said that the series “was meant to be educational for kids. We were trying to educate kids about certain things about the human condition.”
+
+      2. THE DOCTOR DIDN’T BECOME A “TIME LORD” UNTIL 1969.
+      While even the most casual of Doctor Who fans can probably tell you that The Doctor is a “Time Lord,” an ancient alien species that has the power to travel through time, the term itself wasn’t actually used until the series’ sixth season episode “The War Games.” His home planet of Gallifrey wasn’t mentioned by name until 1973.
+
+      3. THE DOCTOR MAY OR MAY NOT BE A DOCTOR AT ALL.
+      Is the Doctor really a doctor? According to the Second Doctor (played by Patrick Troughton), the answer is yes … or at least he thinks so. In the fourth season episode “The Moonbase,” the Doctor’s companion, Polly, asked what audiences had been wondering for years: “Are you a medical doctor?” To which the Doctor replies, “Yes, I think I was once, Polly. I think I took a degree once in Glasgow. 1888 I think.”
+
+      4. THE FIRST DOCTOR’S HEALTH PROBLEMS LED TO THE IDEA OF REGENERATION.
+      William Hartnell, who played the First Doctor from 1963 to 1966, was having health problems toward the end of his run on the series. To ensure that the show could go on without its original star, and to avoid enraging viewers who had come to love Hartnell, the showrunners decided that, instead, they would make the ability to regenerate be a part of The Doctor’s mythology.
+
+      5. THE DOCTOR’S REGENERATION IS SUPPOSED TO FEEL LIKE A BAD ACID TRIP.
+      Years after it was written, an internal BBC memo was uncovered that outlined the “metaphysical change” that would take place as the First Doctor became the Second Doctor. “It is as if he had had the L.S.D. drug,” the memo explained, “and instead of experiencing the kicks, he has the hell and dank horror which can be its effect.”
+
+      6. RIDLEY SCOTT WAS SUPPOSED TO DESIGN THE DALEKS.
+      Considering what he did with Alien and Blade Runner, seeing what Oscar-nominated director Ridley Scott would have dreamed up for the Daleks would have been pretty fascinating. Unfortunately, we’ll never have the chance. Though Scott, who worked for the BBC at the time of Doctor Who’s creation, was assigned the enviable task of designing the show’s devilish Daleks, he ended up leaving the network to concentrate on becoming a director.
+      Instead, we have the late Raymond Cusick to thank for the Daleks’ iconic design. "People do say I was inspired by a pepper pot—but I always think 'If that's all it takes to become a designer then it's a doddle,'” Cusick once said of the final design.
+
+      7. ONE OF THE SHOW’S ORIGINAL CREATORS WAS NOT HAPPY ABOUT THE DALEKS.
+      Sydney Newman, the BBC’s then-head of drama and one of Doctor Who’s original creators, was very specific about one thing he did not want to see in the series: “Being a real aficionado of science fiction, I hated stories which used bug-eyed monsters, otherwise known as BEMs,” he recalled. “I write in my memo that there would be no bug-eyed monsters in Doctor Who. And after a few episodes, [producer] Verity Lambert turned up with the Daleks! I bawled her out for it, but she said ‘Honest, Sydney, they’re not bug-eyed monsters—they’re human beings who are so advanced that their bodies have atrophied and they need these casings to manipulate and do the things they want!’ Of course, the Daleks took off and captured everybody’s imagination. Some of the best things I have ever done are the thing I never wanted to do.”
+
+      8. THE DALEKS ALMOST DIDN’T MAKE IT INTO THE SHOW’S REVIVAL.
+      When Doctor Who made its triumphant return to television in 2005, it almost happened without the Daleks. The estate of Terry Nation, who created the mutants, had initially attempted to block their return to the new series, claiming that it would “ruin the brand of the Daleks.” At one point, when negotiations between the BBC and Nation’s estate seemed to have broken down, the show’s producers even created a new villain. Fortunately, they were able to work it out.
+
+      9. DOUGLAS ADAMS WROTE SEVERAL EPISODES.
+      At the same time he was creating episodes of The Hitchhiker's Guide to the Galaxyfor BBC Radio 4, Douglas Adams was commissioned to do some writing for Doctor Who. According to Adams, the first episode of The Hitchhiker’s Guide “more or less coincided with the summer period at the BBC, where, in order for anything to get approved, you have to wait for people to come back from whichever beach they're lying on. So that took a long time. While I was kicking my heels, I sent in my pilot episode to the then script editor of Doctor Who, Robert Holmes, who said 'Yes, yes. Like this. Come round and see us.' So we discussed ideas for a bit, and I eventually got commissioned to write four Doctor Who episodes. It took a long time to reach that decision, and then, after all this period of nothing happening, I was suddenly commissioned to write four Doctor Whos and the next five Hitchhikers all at once."
+
+      10. THE DOCTOR HAWKED COMPUTERS IN THE 1980S.
+      In the 1980s, personal computers were still pretty futuristic. So it makes sense that Prime Computer would enlist Tom Baker, who played the Fourth Doctor from 1974 to 1981, to serve as their spokesperson/spokestimelord. His faithful companion Romana (Lalla Ward) made an appearance, too.
+
+      11. IT TOOK SIX YEARS TO TRADEMARK THE TARDIS.
+      In 1996, after years of selling TARDIS-branded merchandise, the BBC attempted to officially trademark The Doctor’s preferred mode of transportation—but the move was met with resistance from the Metropolitan Police, as the time-travel machine is essentially a police box. Six years later, in 2002, the BBC finally won the case, while the Metropolitan Police were ordered to pay £850, plus legal costs.
+
+      12. DAVID TENNANT BECAME AN ACTOR WITH THE SPECIFIC GOAL OF PLAYING THE DOCTOR.
+      When the Tenth Doctor was just a kid, he knew exactly what he wanted to be when he grew up: the star of Doctor Who. It was Tom Baker’s version of The Doctor in particular that inspired David Tennant to become an actor. He carried around a Doctor Who doll and wrote Who-inspired essays at school. "Doctor Who was a massive influence," Tennant told Rolling Stone. "I think it was for everyone in my generation; growing up, it was just part of the cultural furniture in Britain in the '70s and '80s."
+
+      13. PETER CAPALDI WAS A MAJOR FAN, TOO (AND WOULDN'T LEAVE THE BBC ALONE).
+      Outgoing Doctor Peter Capaldi was obsessed with the series as a kid, too. As a teenager, he created a ton of Doctor Who fan art and even managed to get some of it published. More than 40 years before he was named the Twelfth Doctor, some BBC staffers already knew his name—because he used to inundate them with letters requesting production photos and begging to be named president of the show’s fan club.
+      “He haunted my time running the fan club, as he was quite indignant he wasn’t considered for the post,” recalled Sarah Newman, an assistant to the show’s producer at the time, who was forced to tell the teenage future-Doctor that they had already named a president.
+
+      14. CATHERINE ZETA-JONES COULD HAVE BEEN THE DOCTOR.
+        Though Jodie Whittaker will be the series' first official female Doctor, she's not the first actress to be considered for the role. Back in the 1980s, Sydney Newman had an idea for how to revitalize the show: regenerate the Time Lord into a Time Lady. For years, the show’s producers have toyed with the idea of making The Doctor a woman. In 2008, showrunner Russell Davies broached the idea yet again, citing Catherine Zeta-Jones as his top pick to replace Tennant.
+
+      15. BENEDICT CUMBERBATCH AND HUGH GRANT BOTH TURNED DOWN THE CHANCE TO PLAY THE DOCTOR.
+      Catherine Zeta-Jones isn’t the only famous Could've-been Doctor: Hugh Grant was offered the role of The Doctor when the show was being revitalized, but reportedly turned it down because he worried it wouldn’t be a hit. Sherlock star Benedict Cumberbatch also said no. “David and I talked about it but I thought it would have to be radically different,” Cumberbatch said.
+
+      16. MATT SMITH AUDITIONED FOR SHERLOCK A WEEK BEFORE AUDITIONING FOR DOCTOR WHO.
+      Though Cumberbatch was always the first and only choice for Sherlock’s lead role, a number of actors—including Matt Smith—auditioned to play his sidekick, Dr. John Watson. Smith auditioned for the role just about a week before he went in and read for the Eleventh Doctor. Fortunately, the latter worked out for him. (Steven Moffat was the showrunner on both Doctor Who and Sherlock, though Broadchurch creator Chris Chibnall has taken over those duties beginning with this new season.)
+
+      17. A 2008 EPISODE FEATURED A FUTURE DOCTOR AND A FUTURE COMPANION.
+      The 2008 episode “The Fires of Pompeii,” which recreated the eruption of Mount Vesuvius, was notable for two of its guest stars: Peter Capaldi played a sculptor named Caecilius while his future companion, Karen Gillan, was cast as a soothsayer.
+
+      18. THE TENTH DOCTOR MARRIED THE FIFTH DOCTOR’S DAUGHTER, WHO PLAYED THE TENTH DOCTOR’S DAUGHTER.
+      Confused? In 2011, David Tennant married Georgia Moffett, who played his artificially created daughter, Jenny, in the 2008 episode “The Doctor’s Daughter.” In real life, Moffett really is The Doctor’s daughter; her father is Peter Davison, who played the Fifth Doctor from 1981 to 1984.
+
+      19. A PROPOSED MOVIE, STARRING MICHAEL JACKSON, WAS ABANDONED.
+      In the late 1980s, at the height of  Michael Jackson mania, Paramount Pictures proposed a Doctor Who movie that would see The King of Pop play a Time Lord. Obviously, and unfortunately, this never happened.
+
+      20. MORE THAN 100 EPISODES ARE LOST.
+      Back in the 1960s and 1970s, archiving media was a much more difficult—and physical—process. As a result, more than 100 episodes of the show’s original incarnation were deleted, destroyed, or otherwise lost. Fortunately, the series’ fan base has been able to step in and help, providing the network with their own personal copies to help rebuild the Doctor Who library.
+      One episode in particular, “The Power of the Daleks,” saw new life in November 2016. More than 40 years after it was destroyed in 1974, the episode was recreated as a BBC-approved animated special. It screened in U.S. theaters courtesy of Fathom Events.
+
+
   </section>
   </body>
 </html>
