--- a/IT1/Vurdering 30.april/index.html
+++ b/IT1/Vurdering 30.april/index.html
@@ -41,10 +41,13 @@
 
   <div id="main">
 
+
   <div class="w3-teal">
     <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
     <div class="w3-container">
-      <h1>Doctor Who</h1>
+      <div id="myHeader">
+        <img src="Doctor-Who-Logo.png" alt="">
+      </div>
     </div>
   </div>
 
@@ -63,6 +66,7 @@
     document.getElementById("openNav").style.display = "inline-block";
   }
   </script>
+
 
     </header>
   <hr>
@@ -89,6 +93,12 @@
 </div>
   </div>
 
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+        <img src="Wallpaper5.jpg" style="width:100%">
+      </div>
+    </div>
+
 <div class="slideshow-container">
   <div class="mySlides fade">
       <img src="Wallpaper2.jpg" style="width:100%">
@@ -100,10 +110,6 @@
         <img src="Wallpaper3.jpg" style="width:100%">
       </div>
     </div>
-
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="changeSlides(-1)">&#10094;</a>
-    <a class="next" onclick="changeSlides(1)">&#10095;</a>
   </div>
   <br>
 
@@ -140,7 +146,7 @@ function showSlides() {
   <div class="row">
     <div class="column">
       <div class="content">
-        <img src="11th Screwdriver.jpg" alt="Scrwdrivers" style="width:100%">
+        <img src="13th Driver.jpg" alt="Scrwdrivers" style="width:100%">
         <a href="Screwdrivers.html">Link her</a>
         <h3>Screwdrivers</h3>
         <p>Lorem ipsum..</p>
@@ -148,9 +154,9 @@ function showSlides() {
     </div>
     <div class="column">
       <div class="content">
-        <img src="" alt="Cupps" style="width:100%">
-        <a href="#">Link her</a>
-        <h3>Cupps</h3>
+        <img src="Pillow7.jpg" alt="Shop" style="width:100%">
+        <a href="Shop.html">Link her</a>
+        <h3>Shop</h3>
         <p>Lorem ipsum..</p>
       </div>
     </div>
@@ -173,38 +179,12 @@ function showSlides() {
   </div>
 
   <div class="content">
-    <img src="bear.jpg" alt="Bear" style="width:100%">
-    <h3>Some Other Work</h3>
-    <p>Lorem ipsum..</p>
+      <iframe width="100%" height="500px" src="https://www.youtube.com/embed/DNEjx6XUbfQ?start=4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   </div>
 </main>
 
-<footer>
-  <div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <img src="Ninth Doc.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
-    </div>
-
-    <div class="mySlides fade">
-      <img src="10th Doc" style="width:100%">
-      <div class="text">Caption Two</div>
-    </div>
-
-    <div class="mySlides fade">
-      <img src="12th Doc" style="width:100%">
-      <div class="text">Caption Three</div>
-    </div>
-
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-
-</footer>
 
   </body>
 </html>
