--- a/IT1/Vurdering 30.april/index.html
+++ b/IT1/Vurdering 30.april/index.html
@@ -179,7 +179,7 @@ function showSlides() {
   </div>
 
   <div class="content">
-      <iframe width="100%" height="500px" src="https://www.youtube.com/embed/DNEjx6XUbfQ?start=4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="500px" src="https://www.youtube.com/embed/DNEjx6XUbfQ?start=4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   </div>
 </main>
