--- a/IT1/Vare-Hare/Om Oss.html
+++ b/IT1/Vare-Hare/Om Oss.html
@@ -17,11 +17,10 @@
         onclick="w3_close()">Close &times;</button>
         <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
         <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
-        <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
+        <a href="Kontakter.html" class="w3-bar-item w3-button">Kontakter</a>
         <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
         <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
         <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
-
 
       </div>
 
@@ -32,7 +31,7 @@
 
       <nav>
         <a href="#">Om Oss</a>
-        <a href="Bli Medlem.html">Bli Medlem</a>
+        <a href="#">Bli Medlem</a>
 
       </nav>
 
@@ -59,9 +58,6 @@
     <h2>Grid of Boxes</h2>
     <p>Float boxes side by side:</p>
 
-<section id="boxes">
-  <p>Some text inside the box.</p>
-</section>
     <div class="clearfix">
       <div class="box" style="background-color:#bbb">
       <p>Some text inside the box.</p>
