--- a/IT1/Vare-Hare/Test 1.html
+++ b/IT1/Vare-Hare/Test 1.html
@@ -9,8 +9,12 @@
 
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+      <link rel="stylesheet" href="Test 1.css">
+      
       <body>
+
+<section id="Navbar original">
+
 
         <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
           <button class="w3-bar-item w3-button w3-large"
@@ -22,22 +26,22 @@
           <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
           <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
 
+
       </div>
+      </section>
 
       <div id="main">
       <div class="w3-teal">
         <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
         <div class="w3-container">
-
-      <nav>
-        <a href="Om Oss.html">Om Oss</a>
-        <a href="Bli Medlem.html">Bli Medlem</a>
-
-      </nav>
+<div class="grid-container">
+  <p> <a href="Bli Medlem.html"></a>Bli Medlem</p>
+  <p> <img src="Vare-Hare.png" alt=""> </p>
+  <p> <a href="Om Oss.html"></a>Om oss</p>
+  </div>
+</div>
 
         </div>
-      </div>
-
       </div>
 
       <script>
@@ -58,6 +62,17 @@
     <h2>Grid of Boxes</h2>
     <p>Float boxes side by side:</p>
 
+<section id="boxes">
+  <div class="box" style="background-color:#bbb">
+  <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ccc">
+  <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ddd">
+  <p>Some text inside the box.</p>
+  </div>
+</section>
     <div class="clearfix">
       <div class="box" style="background-color:#bbb">
       <p>Some text inside the box.</p>
