--- a/IT1/Vare-Hare/Bli Medlem.html
+++ b/IT1/Vare-Hare/Bli Medlem.html
@@ -11,15 +11,15 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <body>
 
-        <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-          <button class="w3-bar-item w3-button w3-large"
-          onclick="w3_close()">Close &times;</button>
-          <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
-          <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
-          <a href="Kontakter.html" class="w3-bar-item w3-button">Kontakter</a>
-          <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
-          <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
-          <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
+          <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+            <button class="w3-bar-item w3-button w3-large"
+            onclick="w3_close()">Close &times;</button>
+            <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
+            <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
+            <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
+            <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
+            <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
+            <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
 
         </div>
 
@@ -98,16 +98,8 @@
 <br>
         <label for="fname"></label>
         <input type="text" id="fname" name="firstname" placeholder="CCV/CVC">
-<br>
-<br>
-        <label for="country"></label>
-        <select id="country" name="country">
-          <option value="australia">Australia</option>
-          <option value="canada">Canada</option>
-          <option value="usa">USA</option>
-        </select>
           </li>
-
+<br>
         <input type="submit" value="Submit">
 
       </form>
