--- a/IT1/Vare-Hare/Index.html
+++ b/IT1/Vare-Hare/Index.html
@@ -3,42 +3,44 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="Index.css">
   </head>
-  <header>
+  <body>
+    <header>
+
+      <div class="grid-container">
+        <p> <a href="Bli Medlem.html"></a>Bli Medlem</p>
+        <p> <img src="Vare-Hare.png" alt=""> </p>
+        <p> <a href="Om Oss.html"></a>Om oss</p>
+        </div>
+
+<section id="Navbar original">
 
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-      <body>
-
-      <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-        <button class="w3-bar-item w3-button w3-large"
-        onclick="w3_close()">Close &times;</button>
-        <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
-        <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
-        <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
-        <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
-        <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
-        <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
+        <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+          <button class="w3-bar-item w3-button w3-large"
+          onclick="w3_close()">Close &times;</button>
+          <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
+          <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
+          <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
+          <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
+          <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
+          <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
 
 
       </div>
+      </section>
 
       <div id="main">
       <div class="w3-teal">
         <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
         <div class="w3-container">
 
-      <nav>
-        <a href="#">Om Oss</a>
-        <a href="Bli Medlem.html">Bli Medlem</a>
-
-      </nav>
+</div>
 
         </div>
-      </div>
-
       </div>
 
       <script>
@@ -55,12 +57,19 @@
       }
       </script>
   </header>
-  <body>
     <h2>Grid of Boxes</h2>
     <p>Float boxes side by side:</p>
 
 <section id="boxes">
+  <div class="box" style="background-color:#bbb">
   <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ccc">
+  <p>Some text inside the box.</p>
+  </div>
+  <div class="box" style="background-color:#ddd">
+  <p>Some text inside the box.</p>
+  </div>
 </section>
     <div class="clearfix">
       <div class="box" style="background-color:#bbb">
