--- a/IT1/Vare-Hare/Bli Medlem.html
+++ b/IT1/Vare-Hare/Bli Medlem.html
@@ -14,7 +14,7 @@
           <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
             <button class="w3-bar-item w3-button w3-large"
             onclick="w3_close()">Close &times;</button>
-            <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
+            <a href="Miljøvennlig.html" class="w3-bar-item w3-button">Miljøvennlig</a>
             <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
             <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
             <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
