--- a/IT1/Vare-Hare/Test3.html
+++ b/IT1/Vare-Hare/Test3.html
@@ -14,7 +14,7 @@
             <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
               <button class="w3-bar-item w3-button w3-large"
               onclick="w3_close()">Close &times;</button>
-              <a href="Miljøvennlig.html" class="w3-bar-item w3-button">Miljøvennlig</a>
+              <a href="Index.html" class="w3-bar-item w3-button">Hjem</a>
               <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
               <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
               <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
@@ -55,43 +55,45 @@
       </header>
 
 
-  <body>
+    <body>
 
-<main>
-<section id="boxes">
-  <div class="box" style="background-color:green">
-    <a href="#"></a>
-  <p>Har du hare? Registrer</p>
-  </div>
-  <div class="box" style="background-color:green">
-    <a href="#"></a>
-  <p>Nyheter</p>
-  </div>
-</section>
+    <div class="row">
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Dec 7, 2017</h5>
+          <div class="fakeimg" style="height:200px;">Image</div>
+          <p>Some text..</p>
+          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+        <div class="card">
+          <h2>TITLE HEADING</h2>
+          <h5>Title description, Sep 2, 2017</h5>
+          <div class="fakeimg" style="height:200px;">Image</div>
+          <p>Some text..</p>
+          <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+      </div>
+      <div class="rightcolumn">
+        <div class="card">
+          <h2>About Me</h2>
+          <div class="fakeimg" style="height:100px;">Image</div>
+          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        </div>
+        <div class="card">
+          <h3>Popular Post</h3>
+          <div class="fakeimg"><p>Image</p></div>
+          <div class="fakeimg"><p>Image</p></div>
+          <div class="fakeimg"><p>Image</p></div>
+        </div>
+        <div class="card">
+          <h3>Follow Me</h3>
+          <p>Some text..</p>
+        </div>
+      </div>
+    </div>
 
-<section id="boxes1">
-  <div class="box" style="background-color:green">
-    <a href=""></a>
-    <img src="Bilder/Pic2.jpg" alt="">
-  <p>Sesong</p>
-  </div>
-  <div class="box" style="background-color:green">
-    <a href=""></a>
-    <img src="Bilder/Pic1.jpg" alt="">
-  <p>Begyn å handle</p>
-  </div>
-  <div class="box" style="background-color:green">
-    <a href=""></a>
-    <img src="Bilder/Pic3.jpg" alt="">
-  <p>Om Oss</p>
-  </div>
-</section>
 
 
-<section id="bilde1">
-  <img src="Vare-Hare.png" alt="">
-</section>
-
-</main>
-  </body>
-</html>
+    </body>
+    </html>
