--- a/IT1/Vare-Hare/Kontakt oss.html
+++ b/IT1/Vare-Hare/Kontakt oss.html
@@ -1,60 +1,58 @@
 <!DOCTYPE html>
 <html lang="nb" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="Test4.css">
+    </head>
+    <header>
+      <section id="Navbar-original">
 
-  </head>
-  <header>
+
+              <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+                <button class="w3-bar-item w3-button w3-large"
+                onclick="w3_close()">Close &times;</button>
+                <a href="Test 1.html" class="w3-bar-item w3-button">Miljøvennlig</a>
+                <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
+                <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
+                <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
+                <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
+                <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
 
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-      <body>
+            </div>
+            </section>
 
-      <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-        <button class="w3-bar-item w3-button w3-large"
-        onclick="w3_close()">Close &times;</button>
-        <a href="Miljøvennlig.html" class="w3-bar-item w3-button">Miljøvennlig</a>
-        <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
-        <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
-        <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
-        <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
-        <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
+            <div id="main">
+            <div class="w3-teal">
+              <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+              <div class="w3-container">
 
-      </div>
+                  <a href="Om Oss.html">Om Oss</a>
+                  <img src="Vare-Hare1.png"/>
+                  <a href="Kontakt Oss">Kontakt Oss</a>
 
-      <div id="main">
-      <div class="w3-teal">
-        <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-        <div class="w3-container">
 
-      <nav>
-        <a href="#">Om Oss</a>
-        <a href="#">Bli Medlem</a>
-
-      </nav>
 
         </div>
       </div>
 
-      </div>
+              </div>
 
-      <script>
-      function w3_open() {
-        document.getElementById("main").style.marginLeft = "25%";
-        document.getElementById("mySidebar").style.width = "25%";
-        document.getElementById("mySidebar").style.display = "block";
-        document.getElementById("openNav").style.display = 'none';
-      }
-      function w3_close() {
-        document.getElementById("main").style.marginLeft = "0%";
-        document.getElementById("mySidebar").style.display = "none";
-        document.getElementById("openNav").style.display = "inline-block";
-      }
-      </script>
-  </header>
-
+            <script>
+            function w3_open() {
+              document.getElementById("main").style.marginLeft = "25%";
+              document.getElementById("mySidebar").style.width = "25%";
+              document.getElementById("mySidebar").style.display = "block";
+              document.getElementById("openNav").style.display = 'none';
+            }
+            function w3_close() {
+              document.getElementById("main").style.marginLeft = "0%";
+              document.getElementById("mySidebar").style.display = "none";
+              document.getElementById("openNav").style.display = "inline-block";
+            }
+            </script>
+    </header>
   <body>
 <section id="Hei">
   <h2>Hva kan vi hjelpe med?</h2>
@@ -63,7 +61,7 @@
 
 
 
-    <div class="container">
+    <div class="container-Kontakt">
     <form action="action_page.php">
 
       <label for="fname"></label>
