--- a/IT1/Vare-Hare/Test 1.html
+++ b/IT1/Vare-Hare/Test 1.html
@@ -5,82 +5,83 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="Test 1.css">
-  </head>
-  <header>
-    <section id="Navbar-original">
+    <link rel="stylesheet" href="Test4.css">
+    </head>
+    <header>
+      <section id="Navbar-original">
 
 
-            <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-              <button class="w3-bar-item w3-button w3-large"
-              onclick="w3_close()">Close &times;</button>
-              <a href="Miljøvennlig.html" class="w3-bar-item w3-button">Miljøvennlig</a>
-              <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
-              <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
-              <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
-              <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
-              <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
+              <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+                <button class="w3-bar-item w3-button w3-large"
+                onclick="w3_close()">Close &times;</button>
+                <a href="Test 1.html" class="w3-bar-item w3-button">Miljøvennlig</a>
+                <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
+                <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
+                <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
+                <a href="Bli Medlem.html" class="w3-bar-item w3-button">Bli Medlem</a>
+                <a href="Sammarbeid med oss.html" class="w3-bar-item w3-button">Sammarbeid med oss</a>
 
-
-          </div>
-          </section>
-
-          <div id="main">
-          <div class="w3-teal">
-            <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-            <div class="w3-container">
-
-                <a href="Om Oss.html">Om Oss</a>
-                <img src="Vare-Hare.png" alt="">
-                <a href="Kontakt Oss">Kontakt Oss</a>
-
-      </div>
-    </div>
 
             </div>
+            </section>
 
-          <script>
-          function w3_open() {
-            document.getElementById("main").style.marginLeft = "25%";
-            document.getElementById("mySidebar").style.width = "25%";
-            document.getElementById("mySidebar").style.display = "block";
-            document.getElementById("openNav").style.display = 'none';
-          }
-          function w3_close() {
-            document.getElementById("main").style.marginLeft = "0%";
-            document.getElementById("mySidebar").style.display = "none";
-            document.getElementById("openNav").style.display = "inline-block";
-          }
-          </script>
-      </header>
+            <div id="main">
+            <div class="w3-teal">
+              <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+              <div class="w3-container">
 
+                  <a href="Om Oss.html">Om Oss</a>
+                  <img src="Vare-Hare1.png"/>
+                  <a href="Kontakt Oss">Kontakt Oss</a>
+
+
+
+        </div>
+      </div>
+
+              </div>
+
+            <script>
+            function w3_open() {
+              document.getElementById("main").style.marginLeft = "25%";
+              document.getElementById("mySidebar").style.width = "25%";
+              document.getElementById("mySidebar").style.display = "block";
+              document.getElementById("openNav").style.display = 'none';
+            }
+            function w3_close() {
+              document.getElementById("main").style.marginLeft = "0%";
+              document.getElementById("mySidebar").style.display = "none";
+              document.getElementById("openNav").style.display = "inline-block";
+            }
+            </script>
+    </header>
 
   <body>
 
 <main>
 <section id="boxes">
-  <div class="box" style="background-color:green">
+  <div class="box" style="background-color:#a9d18e">
     <a href="#"></a>
   <p>Har du hare? Registrer</p>
   </div>
-  <div class="box" style="background-color:green">
+  <div class="box" style="background-color:#a9d18e">
     <a href="#"></a>
   <p>Nyheter</p>
   </div>
 </section>
 
 <section id="boxes1">
-  <div class="box" style="background-color:green">
+  <div class="box" style="background-color:#a9d18e">
     <a href=""></a>
     <img src="Bilder/Pic2.jpg" alt="">
   <p>Sesong</p>
   </div>
-  <div class="box" style="background-color:green">
+  <div class="box" style="background-color:#a9d18e">
     <a href=""></a>
     <img src="Bilder/Pic1.jpg" alt="">
   <p>Begyn å handle</p>
   </div>
-  <div class="box" style="background-color:green">
+  <div class="box" style="background-color:#a9d18e">
     <a href=""></a>
     <img src="Bilder/Pic3.jpg" alt="">
   <p>Om Oss</p>
