--- a/IT1/Vare-Hare/Test4.html
+++ b/IT1/Vare-Hare/Test4.html
@@ -14,7 +14,7 @@
             <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
               <button class="w3-bar-item w3-button w3-large"
               onclick="w3_close()">Close &times;</button>
-              <a href="Miljøvennlig.html" class="w3-bar-item w3-button">Miljøvennlig</a>
+              <a href="Test 1.html" class="w3-bar-item w3-button">Miljøvennlig</a>
               <a href="Nyheter.html" class="w3-bar-item w3-button">Nyheter</a>
               <a href="Kontakt oss.html" class="w3-bar-item w3-button">Kontakt oss</a>
               <a href="Butikk.html" class="w3-bar-item w3-button">Butikk</a>
@@ -31,7 +31,8 @@
             <div class="w3-container">
 
                 <a href="Om Oss.html">Om Oss</a>
-                <img src="Vare-Hare-Logo2.0.png"/>
+                <img src="Vare-Hare1.png"/>
+                <h2>Vare-Hare</h2>
                 <a href="Kontakt Oss">Kontakt Oss</a>
 
 
@@ -62,9 +63,11 @@
     <div class="card">
       <h2>Om Oss</h2>
       <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
+      <img src="Infrastruktur.png" alt="">
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+
+      <a href="Om Oss Underside.html">Les Mer</a>
     </div>
     <div class="card">
       <h2></h2>
@@ -76,9 +79,10 @@
   </div>
   <div class="rightcolumn">
     <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
+      <h2>Daglig Leder </h2>
+      <img src="Jakob.jpg" alt="">
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <a href="Daglig Leder.html">Les Mer</a>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
@@ -89,6 +93,11 @@
     <div class="card">
       <h3>Follow Me</h3>
       <p>Some text..</p>
+      <li>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      </li>
     </div>
   </div>
 </div>
