--- a/IT1/Vare-Hare/Daglig Leder.html
+++ b/IT1/Vare-Hare/Daglig Leder.html
@@ -30,7 +30,7 @@
             <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
             <div class="w3-container">
 
-                <a href="Om Oss.html">Om Oss</a>
+                <a href="Test4.html">Om Oss</a>
                 <img src="Vare-Hare1.png"/>
                 <a href="Kontakt Oss">Kontakt Oss</a>
 
