--- a/IT1/Portfolio/index.html
+++ b/IT1/Portfolio/index.html
@@ -37,28 +37,28 @@
 <section id="Book">
   <img src="Bookshop.PNG" alt="Bilde" class="image" style="width: 100%">
   <div class="Text">
-    <div class="text">Trykk her</div> <a href="file:///C:/Users/Tawin/Documents/GitHub/ThomasAW2002.github.io/IT1/Netthandel/index.html">Trykk Her</a>
+    <div class="text"> <a href="file:///C:/Users/Tawin/Documents/GitHub/ThomasAW2002.github.io/IT1/Netthandel/index.html">Trykk Her</a> </div> 
   </div>
 </section>
 
 <section id="Pokemon">
   <img src="Pokemon.PNG" alt="Bilde" class="image" style="width: 100%">
   <div class="Text">
-  <div class="text">Trykk her</div> <a href="file:///C:/Users/Tawin/Documents/GitHub/ThomasAW2002.github.io/IT1/uke_7_sp%C3%B8rringer/pokemon3.html">Trykk Her</a>
+  <div class="text"> <a href="file:///C:/Users/Tawin/Documents/GitHub/ThomasAW2002.github.io/IT1/uke_7_sp%C3%B8rringer/pokemon3.html">Trykk Her</a> </div>
   </div>
 </section>
 
 <section id="Sandvika">
   <img src="Vare-Hare.png" alt="Bilde" class="image" style="width: 100%">
   <div class="Text">
-    <div class="text">Trykk her</div> <a href="https://solveig-linnea.github.io/IT1AndreTermin/Buisness_IT_prosjekt/index.html">Trykk her</a>
+    <div class="text"> <a href="https://solveig-linnea.github.io/IT1AndreTermin/Buisness_IT_prosjekt/index.html">Trykk her</a> </div>
   </div>
 </section>
 
 <section id="Butikk">
   <img id="ButikkBilde" alt="Bilde"src="Wallpaper1.jpg" alt="">
   <div class="Text">
-  <div class="text">Trykk her</div> <a href="file:///C:/Users/Tawin/Documents/GitHub/ThomasAW2002.github.io/IT1/Vurdering%2030.april/index.html">Trykk Her</a>
+  <div class="text"> <a href="file:///C:/Users/Tawin/Documents/GitHub/ThomasAW2002.github.io/IT1/Vurdering%2030.april/index.html">Trykk Her</a> </div>
   </div>
 </section>
 
