--- a/IT2/5_øvePrøve/if.html
+++ b/IT2/5_øvePrøve/if.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="nb" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-
+    <script src="if.js" charset="utf-8"></script>
   </body>
 </html>
