--- a/IT2/Spill/prosjekt/index.html
+++ b/IT2/Spill/prosjekt/index.html
@@ -7,7 +7,8 @@
     <style>
       body {
         padding: 0;
-        margin: 0;
+        margin-top: 80px;
+        text-align: center;
         }
     </style>
     <script src="p5/p5.js"></script>
