--- a/IT2/Spill/prosjekt/index.html
+++ b/IT2/Spill/prosjekt/index.html
@@ -9,6 +9,16 @@
         padding: 0;
         margin-top: 80px;
         text-align: center;
+
+
+        /* #startBtn{
+          position: absolute;
+          top: 400px;
+          left: 250px;
+          width: 200px;
+          height: 50px;
+          font-size: 20px; */
+        }
         }
     </style>
     <script src="p5/p5.js"></script>
@@ -16,6 +26,11 @@
     <script src="p5/addons/p5.sound.js"></script>
   </head>
   <body>
+
+
+<!-- <div class="game">
+  <button id="startBtn" type="button" name="button">START</button>
+</div> -->
 
 
     <script src="sketch.js"></script>
